--- a/src/styles/scss/sections/footer/mobile/0p.scss
+++ b/src/styles/scss/sections/footer/mobile/0p.scss
@@ -3,6 +3,9 @@
     padding: 45px $padding-x-mobile;
     background-color: $dark-purple;
     margin-top: 45px;
+    a {
+      text-decoration: none;
+    }
     .about {
       a {
         svg {
