--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -74,3 +74,4 @@ body {
 @import "./sections/testimonial/index.scss";
 @import "./sections/explorenow/index.scss";
 @import "./sections/footer/index.scss";
+@import "./sections/preloader/index.scss";
