--- a/src/styles/scss/sections/banner/desktop/1024p.scss
+++ b/src/styles/scss/sections/banner/desktop/1024p.scss
@@ -2,7 +2,7 @@
   #banner {
     width: 100vw;
     min-height: 100vh;
-    background-image: url("../../assets/images/banner_background.png");
+    background-image: url("../../assets/images/banner_background.webp");
     background-size: cover;
     background-position: center center;
     display: flex;
