--- a/src/styles/scss/sections/explorenow/mobile/0p.scss
+++ b/src/styles/scss/sections/explorenow/mobile/0p.scss
@@ -13,7 +13,7 @@
           rgba(203, 176, 255, 0.9) 18.75%,
           rgba(169, 126, 255, 0.9) 132.08%
         ),
-        url("../../assets/images/explore_bg_image.png") no-repeat center center;
+        url("../../assets/images/explore_bg_image.webp") no-repeat center center;
       background-size: cover;
       h1 {
         font-size: 20px;
