--- a/src/styles/scss/sections/introduction/desktop/1024p.scss
+++ b/src/styles/scss/sections/introduction/desktop/1024p.scss
@@ -19,7 +19,7 @@
         content: "";
         width: 500px;
         height: 500px;
-        background-image: url("../../assets/images/Introduction_Decoration.png");
+        background-image: url("../../assets/images/Introduction_Decoration.webp");
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
@@ -32,7 +32,7 @@
         content: "";
         width: 500px;
         height: 500px;
-        background-image: url("../../assets/images/Introduction_Decoration.png");
+        background-image: url("../../assets/images/Introduction_Decoration.webp");
         background-size: cover;
         background-position: center center;
         background-repeat: no-repeat;
