fix margin left loader item

--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -4470,6 +4470,7 @@ button {
   width: 80px;
   height: 80px;
   border-radius: 50%;
+  margin-left: -80px;
 }
 
 .preloader-container div:nth-child(1) {
