--- a/src/styles/scss/sections/preloader/index.scss
+++ b/src/styles/scss/sections/preloader/index.scss
@@ -32,6 +32,7 @@
   width: 80px;
   height: 80px;
   border-radius: 50%;
+  margin-left: -80px;
 }
 .preloader-container div:nth-child(1) {
   background: #ff6ac3;
