--- a/src/styles/scss/sections/introduction/mobile/0p.scss
+++ b/src/styles/scss/sections/introduction/mobile/0p.scss
@@ -6,7 +6,7 @@
       background-color: $dark-purple;
       padding: 24px;
       display: flex;
-      align-items: flex-end;
+      align-items: center;
       justify-content: space-between;
       position: relative;
       flex-direction: column;
