change position of loader from absolute to fixed

--- a/src/styles/scss/sections/preloader/index.scss
+++ b/src/styles/scss/sections/preloader/index.scss
@@ -50,7 +50,7 @@
   animation-delay: -0.8771929824561403s;
 }
 #preloader {
-  position: absolute;
+  position: fixed;
   z-index: 9999;
   background-color: #514270;
 }
