Create responsive design on dpi 2048p, 2560p,3000p, 3600p, 3840p

--- a/src/styles/scss/components/testimonial_item/desktop/1600p.scss
+++ b/src/styles/scss/components/testimonial_item/desktop/1600p.scss
@@ -29,6 +29,12 @@
       p.testimonial-caption {
         font-size: 20px;
       }
+      .rating {
+        svg {
+          width: 20px;
+          height: 20px;
+        }
+      }
     }
     .profile-card {
       margin-top: 4px;
