--- a/src/styles/scss/components/testimonial_item/desktop/1920p.scss
+++ b/src/styles/scss/components/testimonial_item/desktop/1920p.scss
@@ -29,6 +29,12 @@
       p.testimonial-caption {
         font-size: 22px;
       }
+      .rating {
+        svg {
+          width: 22px;
+          height: 22px;
+        }
+      }
     }
     .profile-card {
       margin-top: 4px;
