--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -27,6 +27,11 @@ $padding-x-tablet: 40px;
 $padding-x: 60px;
 $padding-x-1600p: 80px;
 $padding-x-1920p: 100px;
+$padding-x-2048p: 145px;
+$padding-x-2560p: 185px;
+$padding-x-3000p: 210px;
+$padding-x-3600p: 250px;
+$padding-x-3840p: 275px;
 $footer-text: #aea7be;
 body {
   background-color: $light-gray;
