--- a/src/styles/scss/sections/destination/desktop/1920p.scss
+++ b/src/styles/scss/sections/destination/desktop/1920p.scss
@@ -2,7 +2,7 @@
   section#destination {
     padding: 45px 0px;
     .destination-list {
-      padding-left: $padding-x;
+      padding-left: $padding-x-1920p;
       display: flex;
       overflow-x: scroll;
       margin-top: 48px;
