--- a/src/styles/scss/sections/introduction/desktop/1920p.scss
+++ b/src/styles/scss/sections/introduction/desktop/1920p.scss
@@ -8,6 +8,9 @@
       &::after {
         bottom: -175px;
       }
+      &::before {
+        top: 115px;
+      }
       .image {
         flex-basis: 50%;
         img {
