--- a/src/styles/scss/components/blog_preview_list_item/index.scss
+++ b/src/styles/scss/components/blog_preview_list_item/index.scss
@@ -9,3 +9,8 @@
 @import "./desktop/1440p.scss";
 @import "./desktop/1600p.scss";
 @import "./desktop/1920p.scss";
+@import "./desktop/2048p.scss";
+@import "./desktop/2560p.scss";
+@import "./desktop/3000p.scss";
+@import "./desktop/3600p.scss";
+@import "./desktop/3840p.scss";
