--- a/src/styles/scss/sections/navbar/index.scss
+++ b/src/styles/scss/sections/navbar/index.scss
@@ -4,3 +4,8 @@
 @import "./1440p.scss";
 @import "./1600p.scss";
 @import "./1920p.scss";
+@import "./2048p.scss";
+@import "./2560p.scss";
+@import "./3000.scss";
+@import "./3600p.scss";
+@import "./3840p.scss";
